# hardwave-wettboi-vst

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: auth.rs  crash_reporter.rs  editor.rs  lib.rs  params.rs  protocol.rs
src/dsp/: biquad.rs  delay.rs  envelope.rs  filters.rs  lfo.rs  mod.rs  reverb.rs  sidechain.rs
