[workspace]
members = ["xtask"]

[package]
name = "hardwave-wettboi"
version = "0.1.0"
edition = "2021"
license = "Proprietary"
description = "WettBoi — wet signal processor VST3/CLAP plugin by Hardwave Studios"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gui"]
gui = ["dep:wry"]

[dependencies]
# ── nih-plug (VST3 / CLAP framework) ─────────────────────────────────────────
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }

# ── GUI: wry WebView ─────────────────────────────────────────────────────────
wry = { version = "0.46", optional = true }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Concurrency & atomics ────────────────────────────────────────────────────
crossbeam-channel = "0.5"
parking_lot = "0.12"

# ── Auth token storage ───────────────────────────────────────────────────────
dirs = "5"

# ── raw-window-handle bridge (nih-plug uses 0.5, wry uses 0.6) ──────────────
raw-window-handle = "0.6"

# ── Linux GTK (required by wry on X11/Wayland) ──────────────────────────────
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[profile.release]
lto = "thin"
