[workspace]
members = ["xtask"]

[package]
name = "hardwave-wettboi"
version = "0.3.0"
edition = "2021"
license = "Proprietary"
description = "Hardwave WettBoi — sidechain reverb & delay VST3/CLAP plugin by Hardwave Studios"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/Dishairano/nih-plug-hardwave.git", branch = "main" }

[profile.release]
lto = "thin"
